--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/style.css">
+
 <title>Contact | CaptainX</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -230,4 +232,5 @@ function sendWhatsApp(e){
 
 </body>
 </html>
+
 
