--- a/project.html
+++ b/project.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/style.css">
+
   <title>Project Details</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -89,3 +91,4 @@ Designed and developed a clothing website called WEAR 404 for friends. Built the
 
 </body>
 </html>
+
