--- a/project.html
+++ b/project.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/Master-M/css/style.css">
+
 
   <title>Project Details</title>
   <link rel="stylesheet" href="css/style.css">
@@ -91,4 +92,5 @@ Designed and developed a clothing website called WEAR 404 for friends. Built the
 
 </body>
 </html>
+
 
