--- a/projects-web.html
+++ b/projects-web.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>Web Development Projects</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/Master-M/css/style.css">
+
 </head>
 <body>
 
@@ -41,3 +42,4 @@
 
 </body>
 </html>
+
