--- a/start-project.html
+++ b/start-project.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Main Style -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/Master-M/css/style.css">
+
 
   <!-- Font Awesome -->
   <link rel="stylesheet"
@@ -117,4 +118,5 @@ function sendProjectWhatsApp(e){
 
 </body>
 </html>
+
 
