--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="/Master-M/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
+
 
 
   <title>Almohandes | Creative Studio</title>
@@ -289,6 +290,7 @@
 
 </body>
 </html>
+
 
 
 
